@@ -3,6 +3,7 @@ Cacti CHANGELOG
 1.1.37
 -issue#1420: Debian test suite reports issues 
 -issue#1421: Fix issue when SQL had all bad modes, missing variable warning was generated
+-issue#1426: Fix issue where remote poller was not using unique filenames when attempting to verify files
 -issue: fixed typo's
 -feature: Updated Chinese Simplified translations
 -feature: Updated Dutch translations
